--- a/push_swap/Makefile
+++ b/push_swap/Makefile
@@ -28,6 +28,9 @@ SRC_M		=	SRC/push_swap.c\
 				SRC/reverse_rotate.c\
 				SRC/push.c\
 				SRC/utils0.c\
+				SRC/index.c\
+				SRC/sort_2.c\
+				SRC/chunk_sort.c\
 				libftx/ft_putnbr.c\
 				libftx/ft_atoi.c\
 				libftx/ft_putstr.c\
